@@ -2,9 +2,19 @@
 Wildfire.Plugin.FirePHP = function() {
   
 
-  this.PLUGINL_URI = 'http://meta.firephp.org/Wildfire/Plugin/ZendFramework/FirePHP/0.1';
+  this.PLUGINL_URI = 'http://meta.firephp.org/Wildfire/Plugin/FirePHP/FirefoxExtension/0.1';
   this.STRUCTURE_URI_DUMP = 'http://meta.firephp.org/Wildfire/Structure/FirePHP/Dump/0.1';
   this.STRUCTURE_URI_FIREBUGCONSOLE = 'http://meta.firephp.org/Wildfire/Structure/FirePHP/FirebugConsole/0.1';
+
+  this.supportedPlugins =
+      {
+          'http://meta.firephp.org/Wildfire/Plugin/ZendFramework/FirePHP/':
+              {version: '1.6.2'},
+          'http://meta.firephp.org/Wildfire/Plugin/FirePHP/Library-FirePHPCore/':
+              {version: '0.2.0'}
+      }
+      
+  this.peerPlugins = new Array();
 
   
   this.channel = new Wildfire.Channel.HttpHeaders;
@@ -21,6 +31,23 @@ Wildfire.Plugin.FirePHP = function() {
   {
     return this.PLUGINL_URI;
   };
+  this.isPeerPluginSupported = function(uri, version)
+  {
+      if(!this.supportedPlugins[uri]) {
+          return false;
+      }
+      
+      return true;
+  };
+  this.addPeerPlugin = function(uri, version)
+  {
+      var info = this.supportedPlugins[uri];
+      this.peerPlugins.push({uri:uri,version:version,minVersion: info.version});
+  }
+  this.getPeerPlugins = function()
+  {
+      return this.peerPlugins;
+  }
   
   this.receivedMessage = function(Index, Structure, Message) {
     
